tiger/tests/error/unclosed_string.tig
let var N := 8
in
    print(")
end

